--- a/index 2.html
+++ b/index 2.html
@@ -24,16 +24,13 @@
   <meta property="twitter:description" content="Advanced Klondike Solitaire with React, TypeScript, real TensorFlow.js ML, achievements, and modern features." />
   <meta property="twitter:image" content="https://your-domain.github.io/solitaireV5/og-image.png" />
   
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/klondike-solitaire-ai/icons/favicon.png">
-  <link rel="apple-touch-icon" href="/klondike-solitaire-ai/icons/icon-192.png">
-  
   <!-- PWA -->
-  <link rel="manifest" href="/klondike-solitaire-ai/manifest.json" crossorigin="use-credentials">
-  <meta name="theme-color" content="#1e5128">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#1e5128" />
+      <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Solitaire AI" />
   
   <!-- Icons -->
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
