🎨 Cache-busting: Enhanced card graphics with professional shadows, rounded corners, serif fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Klondike Solitaire - AI Enhanced</title>
+    <!-- Enhanced graphics deployed - cache refresh required -->
     <meta name="description" content="Play Klondike Solitaire with AI-powered hints, analysis, and adaptive difficulty. Advanced machine learning provides intelligent gameplay assistance.">
     
     <!-- Social Media Meta Tags -->
