--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                                         <button class="btn-gold" onclick="safeGameCall('ai.autoCompleteGame')" title="AI automatically plays the game to completion" aria-label="Auto-play game">🤖 Auto-Play</button>
                 <button class="btn-orange" onclick="safeGameCall('ui.showMLAnalysis')" title="Show ML analysis" aria-label="Show machine learning analysis">📊 Local AI</button>
                 <button class="btn-purple" onclick="safeGameCall('openaiAgent.showAnalysis')" title="OpenAI Game Analysis" aria-label="Get OpenAI powered game analysis">🤖 GPT Analysis</button>
-                <button class="btn-gold" onclick="safeGameCall('openaiAgent.showMoveRecommendation')" title="OpenAI Move Recommendation" aria-label="Get OpenAI move recommendation">🎯 GPT Hint</button>
+                <button class="btn-gold" onclick="safeGameCall('openaiAgent.showMoveRecommendation')" title="Visual GPT Hint - Highlights best move" aria-label="Get visual GPT hint">💡 Visual Hint</button>
                 <button class="btn-green" onclick="safeGameCall('storage.quickSave')" title="Quick save (S)" aria-label="Quick save game">💾 Save</button>
                 <!-- Phase 2: Performance Monitor Button -->
                 <button class="btn-info" onclick="togglePerformanceMonitor()" title="Show Phase 2 performance metrics" aria-label="Toggle performance monitor">⚡ Performance</button>
