--- a/index.html
+++ b/index.html
@@ -160,8 +160,6 @@
                 reloadButton.addEventListener('click', window.forceReload);
                 document.body.appendChild(reloadButton);
             });
-
-            document.addEventListener('DOMContentLoaded', initializeGame);
         })();
     </script>
     
@@ -198,7 +196,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tensorflow/4.15.0/tf.min.js"></script>
-    <script src="./openai-agent.js"></script>
+    <script src="./openai-agent.js?v=2024.12.20.18.00"></script>
     <style>
         * {
             box-sizing: border-box;
